--- a/pessoa-web/package.json
+++ b/pessoa-web/package.json
@@ -10,8 +10,11 @@
     "react-dom": "^16.8.4",
     "react-icons-kit": "^1.2.1",
     "react-number-format": "^4.0.7",
+    "react-redux": "^7.0.1",
+    "react-redux-toastr": "^7.4.8",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
