--- a/pessoa-servico/src/main/resources/application.properties
+++ b/pessoa-servico/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+jwt.secret=assinatura
+jwt.experation=60000
