adicionando token ao header para conseguir fazer requisição com backend.

--- a/pessoa-servico/src/main/resources/application.properties
+++ b/pessoa-servico/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 jwt.secret=assinatura
-jwt.experation=60000
+jwt.experation=3600000
