--- a/pessoa-servico/src/main/resources/application.properties
+++ b/pessoa-servico/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-jwt.secret=assinatura
+jwt.secret=dilansis
 jwt.experation=3600000
